CSE 310/offline 3/1305043/y.output
Terminals unused in grammar

   DO
   BREAK
   DOUBLE
   VOID
   SWITCH
   CASE
   DEFAULT
   CONTINUE
   STRING


Grammar

    0 $accept: Program $end

    1 Program: INT MAIN LPAREN RPAREN compound_statement

    2 compound_statement: LCURL var_declaration statements RCURL
    3                   | LCURL statements RCURL
    4                   | LCURL RCURL

    5 var_declaration: type_specifier declaration_list SEMICOLON
    6                | var_declaration type_specifier declaration_list SEMICOLON

    7 type_specifier: INT
    8               | FLOAT
    9               | CHAR

   10 declaration_list: declaration_list COMMA ID
   11                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   12                 | ID
   13                 | ID LTHIRD CONST_INT RTHIRD

   14 statements: statement
   15           | statements statement

   16 statement: expression_statement
   17          | compound_statement
   18          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   19          | IF LPAREN expression RPAREN statement
   20          | IF LPAREN expression RPAREN statement ELSE statement
   21          | WHILE LPAREN expression RPAREN statement
   22          | PRINTLN LPAREN ID RPAREN SEMICOLON
   23          | RETURN expression SEMICOLON

   24 expression_statement: SEMICOLON
   25                     | expression SEMICOLON

   26 variable: ID
   27         | ID LTHIRD expression RTHIRD

   28 expression: logic_expression
   29           | variable ASSIGNOP logic_expression

   30 logic_expression: rel_expression
   31                 | rel_expression LOGICOP rel_expression

   32 rel_expression: simple_expression
   33               | simple_expression RELOP simple_expression

   34 simple_expression: term
   35                  | simple_expression ADDOP term

   36 term: unary_expression
   37     | term MULOP unary_expression

   38 unary_expression: ADDOP unary_expression
   39                 | NOT unary_expression
   40                 | factor

   41 factor: variable
   42       | LPAREN expression RPAREN
   43       | CONST_INT
   44       | CONST_FLOAT
   45       | CONST_CHAR
   46       | factor INCOP
   47       | factor DECOP


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 19 20
ELSE (259) 20
FOR (260) 18
WHILE (261) 21
DO (262)
BREAK (263)
INT (264) 1 7
CHAR (265) 9
FLOAT (266) 8
DOUBLE (267)
VOID (268)
RETURN (269) 23
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
INCOP (274) 46
DECOP (275) 47
ADDOP (276) 35 38
MULOP (277) 37
RELOP (278) 33
ASSIGNOP (279) 29
LOGICOP (280) 31
LPAREN (281) 1 18 19 20 21 22 42
RPAREN (282) 1 18 19 20 21 22 42
LCURL (283) 2 3 4
RCURL (284) 2 3 4
LTHIRD (285) 11 13 27
RTHIRD (286) 11 13 27
COMMA (287) 10 11
SEMICOLON (288) 5 6 22 23 24 25
STRING (289)
MAIN (290) 1
PRINTLN (291) 22
NOT (292) 39
ID (293) 10 11 12 13 22 26 27
CONST_INT (294) 11 13 43
CONST_FLOAT (295) 44
CONST_CHAR (296) 45
HELP_ELSE_GET_PRECEDENCE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
compound_statement (45)
    on left: 2 3 4, on right: 1 17
var_declaration (46)
    on left: 5 6, on right: 2 6
type_specifier (47)
    on left: 7 8 9, on right: 5 6
declaration_list (48)
    on left: 10 11 12 13, on right: 5 6 10 11
statements (49)
    on left: 14 15, on right: 2 3 15
statement (50)
    on left: 16 17 18 19 20 21 22 23, on right: 14 15 18 19 20 21
expression_statement (51)
    on left: 24 25, on right: 16 18
variable (52)
    on left: 26 27, on right: 29 41
expression (53)
    on left: 28 29, on right: 18 19 20 21 23 25 27 42
logic_expression (54)
    on left: 30 31, on right: 28 29
rel_expression (55)
    on left: 32 33, on right: 30 31
simple_expression (56)
    on left: 34 35, on right: 32 33 35
term (57)
    on left: 36 37, on right: 34 35 37
unary_expression (58)
    on left: 38 39 40, on right: 36 37 38 39
factor (59)
    on left: 41 42 43 44 45 46 47, on right: 40 46 47


State 0

    0 $accept: . Program $end

    INT  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: INT . MAIN LPAREN RPAREN compound_statement

    MAIN  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: INT MAIN . LPAREN RPAREN compound_statement

    LPAREN  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: INT MAIN LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 6


State 6

    1 Program: INT MAIN LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 7

    compound_statement  go to state 8


State 7

    2 compound_statement: LCURL . var_declaration statements RCURL
    3                   | LCURL . statements RCURL
    4                   | LCURL . RCURL

    IF           shift, and go to state 9
    FOR          shift, and go to state 10
    WHILE        shift, and go to state 11
    INT          shift, and go to state 12
    CHAR         shift, and go to state 13
    FLOAT        shift, and go to state 14
    RETURN       shift, and go to state 15
    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    LCURL        shift, and go to state 7
    RCURL        shift, and go to state 18
    SEMICOLON    shift, and go to state 19
    PRINTLN      shift, and go to state 20
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    compound_statement    go to state 26
    var_declaration       go to state 27
    type_specifier        go to state 28
    statements            go to state 29
    statement             go to state 30
    expression_statement  go to state 31
    variable              go to state 32
    expression            go to state 33
    logic_expression      go to state 34
    rel_expression        go to state 35
    simple_expression     go to state 36
    term                  go to state 37
    unary_expression      go to state 38
    factor                go to state 39


State 8

    1 Program: INT MAIN LPAREN RPAREN compound_statement .

    $default  reduce using rule 1 (Program)


State 9

   19 statement: IF . LPAREN expression RPAREN statement
   20          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 40


State 10

   18 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 41


State 11

   21 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 42


State 12

    7 type_specifier: INT .

    $default  reduce using rule 7 (type_specifier)


State 13

    9 type_specifier: CHAR .

    $default  reduce using rule 9 (type_specifier)


State 14

    8 type_specifier: FLOAT .

    $default  reduce using rule 8 (type_specifier)


State 15

   23 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 32
    expression         go to state 43
    logic_expression   go to state 34
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 16

   38 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable          go to state 44
    unary_expression  go to state 45
    factor            go to state 39


State 17

   42 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 32
    expression         go to state 46
    logic_expression   go to state 34
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 18

    4 compound_statement: LCURL RCURL .

    $default  reduce using rule 4 (compound_statement)


State 19

   24 expression_statement: SEMICOLON .

    $default  reduce using rule 24 (expression_statement)


State 20

   22 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 47


State 21

   39 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable          go to state 44
    unary_expression  go to state 48
    factor            go to state 39


State 22

   26 variable: ID .
   27         | ID . LTHIRD expression RTHIRD

    LTHIRD  shift, and go to state 49

    $default  reduce using rule 26 (variable)


State 23

   43 factor: CONST_INT .

    $default  reduce using rule 43 (factor)


State 24

   44 factor: CONST_FLOAT .

    $default  reduce using rule 44 (factor)


State 25

   45 factor: CONST_CHAR .

    $default  reduce using rule 45 (factor)


State 26

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


State 27

    2 compound_statement: LCURL var_declaration . statements RCURL
    6 var_declaration: var_declaration . type_specifier declaration_list SEMICOLON

    IF           shift, and go to state 9
    FOR          shift, and go to state 10
    WHILE        shift, and go to state 11
    INT          shift, and go to state 12
    CHAR         shift, and go to state 13
    FLOAT        shift, and go to state 14
    RETURN       shift, and go to state 15
    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    LCURL        shift, and go to state 7
    SEMICOLON    shift, and go to state 19
    PRINTLN      shift, and go to state 20
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    compound_statement    go to state 26
    type_specifier        go to state 50
    statements            go to state 51
    statement             go to state 30
    expression_statement  go to state 31
    variable              go to state 32
    expression            go to state 33
    logic_expression      go to state 34
    rel_expression        go to state 35
    simple_expression     go to state 36
    term                  go to state 37
    unary_expression      go to state 38
    factor                go to state 39


State 28

    5 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 52

    declaration_list  go to state 53


State 29

    3 compound_statement: LCURL statements . RCURL
   15 statements: statements . statement

    IF           shift, and go to state 9
    FOR          shift, and go to state 10
    WHILE        shift, and go to state 11
    RETURN       shift, and go to state 15
    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    LCURL        shift, and go to state 7
    RCURL        shift, and go to state 54
    SEMICOLON    shift, and go to state 19
    PRINTLN      shift, and go to state 20
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    compound_statement    go to state 26
    statement             go to state 55
    expression_statement  go to state 31
    variable              go to state 32
    expression            go to state 33
    logic_expression      go to state 34
    rel_expression        go to state 35
    simple_expression     go to state 36
    term                  go to state 37
    unary_expression      go to state 38
    factor                go to state 39


State 30

   14 statements: statement .

    $default  reduce using rule 14 (statements)


State 31

   16 statement: expression_statement .

    $default  reduce using rule 16 (statement)


State 32

   29 expression: variable . ASSIGNOP logic_expression
   41 factor: variable .

    ASSIGNOP  shift, and go to state 56

    $default  reduce using rule 41 (factor)


State 33

   25 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 34

   28 expression: logic_expression .

    $default  reduce using rule 28 (expression)


State 35

   30 logic_expression: rel_expression .
   31                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 58

    $default  reduce using rule 30 (logic_expression)


State 36

   32 rel_expression: simple_expression .
   33               | simple_expression . RELOP simple_expression
   35 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 59
    RELOP  shift, and go to state 60

    $default  reduce using rule 32 (rel_expression)


State 37

   34 simple_expression: term .
   37 term: term . MULOP unary_expression

    MULOP  shift, and go to state 61

    $default  reduce using rule 34 (simple_expression)


State 38

   36 term: unary_expression .

    $default  reduce using rule 36 (term)


State 39

   40 unary_expression: factor .
   46 factor: factor . INCOP
   47       | factor . DECOP

    INCOP  shift, and go to state 62
    DECOP  shift, and go to state 63

    $default  reduce using rule 40 (unary_expression)


State 40

   19 statement: IF LPAREN . expression RPAREN statement
   20          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 32
    expression         go to state 64
    logic_expression   go to state 34
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 41

   18 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    SEMICOLON    shift, and go to state 19
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    expression_statement  go to state 65
    variable              go to state 32
    expression            go to state 33
    logic_expression      go to state 34
    rel_expression        go to state 35
    simple_expression     go to state 36
    term                  go to state 37
    unary_expression      go to state 38
    factor                go to state 39


State 42

   21 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 32
    expression         go to state 66
    logic_expression   go to state 34
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 43

   23 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 44

   41 factor: variable .

    $default  reduce using rule 41 (factor)


State 45

   38 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 38 (unary_expression)


State 46

   42 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 68


State 47

   22 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 69


State 48

   39 unary_expression: NOT unary_expression .

    $default  reduce using rule 39 (unary_expression)


State 49

   27 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 32
    expression         go to state 70
    logic_expression   go to state 34
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 50

    6 var_declaration: var_declaration type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 52

    declaration_list  go to state 71


State 51

    2 compound_statement: LCURL var_declaration statements . RCURL
   15 statements: statements . statement

    IF           shift, and go to state 9
    FOR          shift, and go to state 10
    WHILE        shift, and go to state 11
    RETURN       shift, and go to state 15
    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    LCURL        shift, and go to state 7
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 19
    PRINTLN      shift, and go to state 20
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    compound_statement    go to state 26
    statement             go to state 55
    expression_statement  go to state 31
    variable              go to state 32
    expression            go to state 33
    logic_expression      go to state 34
    rel_expression        go to state 35
    simple_expression     go to state 36
    term                  go to state 37
    unary_expression      go to state 38
    factor                go to state 39


State 52

   12 declaration_list: ID .
   13                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 73

    $default  reduce using rule 12 (declaration_list)


State 53

    5 var_declaration: type_specifier declaration_list . SEMICOLON
   10 declaration_list: declaration_list . COMMA ID
   11                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 74
    SEMICOLON  shift, and go to state 75


State 54

    3 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 3 (compound_statement)


State 55

   15 statements: statements statement .

    $default  reduce using rule 15 (statements)


State 56

   29 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 44
    logic_expression   go to state 76
    rel_expression     go to state 35
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 57

   25 expression_statement: expression SEMICOLON .

    $default  reduce using rule 25 (expression_statement)


State 58

   31 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 44
    rel_expression     go to state 77
    simple_expression  go to state 36
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 59

   35 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable          go to state 44
    term              go to state 78
    unary_expression  go to state 38
    factor            go to state 39


State 60

   33 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 16
    LPAREN       shift, and go to state 17
    NOT          shift, and go to state 21
    ID           shift, and go to state 22
    CONST_INT    shift, and go to state 23
    CONST_FLOAT  shift, and go to state 24
    CONST_CHAR   shift, and go to state 25

    variable           go to state 44
    simple_expression  go to state 79
    term               go to state 37
    unary_expression   go to state 38
    factor             go to state 39


State 61

   37 term: term MULOP . unary_expression
